@@ -1,3 +1,7 @@
+2008-10-13 Chris Allegretta <chrisa@asty.org>
+	* Remove CUTTOEND as an undo type as it's unneeded, fix u->to_end logic in undo struct.
+	* undo.c (update_undo): Don't free cutbuffer if NULL, fix for Savannah bug #24499
+
 2008-10-04 Chris Allegretta <chrisa@asty.org>
 	* cut.c (Add_undo): Save last cut undo information so it can be used for next uncut, fixes
 	  Savannah bug 24183.
